--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html,body{
     font-family: zooja-pro, sans-serif;
     font-weight: 400;
     font-style: normal;
-    overflow-x: hidden !important;
+    /* overflow-x: hidden !important; */
     margin: 0px !important;
     padding: 0px !important;
     scroll-padding-top: 50px;
@@ -13,6 +13,8 @@ html,body{
 *{
     text-decoration: none !important;
 }
+
+/* HOME PAGE */
 
 .big{
     width: 100%;
@@ -42,6 +44,8 @@ html,body{
     top: 90%;
     left: 90%;
 }
+
+/* WELCOME PAGE */
 
 h1{
     font-family: zooja-pro, sans-serif;
@@ -85,10 +89,6 @@ h1{
     background-color: #fcd5ce;
 }
 
-/* .welcome:focus .button1, .welcome:active .button1{
-    background-color: #fae1dd;
-} */
-
 .welcome .button2{
     padding-left: 137px;
     padding-top: 10px;
@@ -107,10 +107,6 @@ h1{
     background-color: #fcd5ce;
 }
 
-/* .welcome:focus .button2, .welcome:active .button2{
-    background-color: #fae1dd;
-} */
-
 .welcome .button3{
     padding-left: 137px;
     padding-top: 10px;
@@ -128,7 +124,6 @@ h1{
 .welcome:hover .button3{
     background-color: #fcd5ce;
 }
-
 
 .go1{
     width: 6%;
@@ -187,7 +182,7 @@ h1{
     left: 91.5%;
 }
 
-iframe{
+.calendar iframe{
     z-index: 5;
     position: absolute;
     align-items: center;
@@ -220,4 +215,112 @@ iframe{
     color: #707070;
     position: absolute;
     z-index: 5;
+}
+
+/* PODCAST PAGE */
+
+
+.big3{
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+}
+
+.homebtn1{
+    width: 6%;
+    position: absolute;
+    margin-bottom: 10%;
+    padding-bottom: 3%;
+    z-index: 2;
+    top: 155%;
+    left: 18%;
+}
+
+.backbtn{
+    width: 6%;
+    position: absolute;
+    margin-bottom: 10%;
+    padding-bottom: 3%;
+    z-index: 2;
+    top: 155%;
+    left: 8%;
+}
+
+.small6{
+    width: 6%;
+    position: absolute;
+    margin-bottom: 10%;
+    padding-bottom: 3%;
+    z-index: 2;
+    top: 155%;
+    left: 28%;
+}
+
+.podcast h1{
+    font-family: zooja-pro, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 150px;
+    margin-top: 60px !important;
+    padding-left: 137px;
+    letter-spacing: 10px;
+    color: #707070;
+    position: absolute;
+    z-index: 5;
+}
+
+.podcast h3{
+    font-family: atten-new, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    margin-top: 190px !important;
+    font-size: 25px;
+    padding-left: 287px;
+    letter-spacing: 10px;
+    margin-bottom: 70px;
+    color: #707070;
+    position: absolute;
+    z-index: 5;
+}
+
+.podcasts .one{
+    top: 30%;
+    left: 13%;
+    position: absolute;
+    z-index: 8;
+}
+
+.podcasts .two{
+    top: 50%;
+    left: 13%;
+    position: absolute;
+    z-index: 8;
+}
+
+.podcasts .three{
+    top: 70%;
+    left: 13%;
+    position: absolute;
+    z-index: 8;
+}
+
+.podcasts .four{
+    top: 90%;
+    left: 13%;
+    position: absolute;
+    z-index: 8;
+}
+
+.podcasts .five{
+    top: 110%;
+    left: 13%;
+    position: absolute;
+    z-index: 8;
+}
+
+.podcasts .six{
+    top: 130%;
+    left: 13%;
+    position: absolute;
+    z-index: 8;
 }
